--- a/css/style.css
+++ b/css/style.css
@@ -1,58 +1,59 @@
-*{
+* {
     padding: 0;
     margin: 0;
 }
 
-body{
+body {
     font-family: Arial, Helvetica, sans-serif;
     background-color: black;
     padding: 0;
     margin: 0;
 }
 
-.container{
+.container {
     margin: auto;
     max-width: 1000px;
 }
 
-header{
+header {
     background-color: #48c5ce;
     text-align: center;
     color: white;
     padding: 10px;
 }
 
-.title{
+.title {
     font-size: 26px;
 }
 
-section{
+section {
     padding: 20px;
     background-image: url('../images/people.jpg');
     background-size: cover;
     overflow: hidden;
 }
 
-.formcontainer{
+.formcontainer {
     max-width: 230px;
     background-color: #ffffffbb;
     padding: 20px;
     float: right;
 }
 
-h2{
+h2 {
     font-size: 16px;
 }
 
-.formcontainer p{
+.formcontainer p {
     text-align: justify;
 }
 
-.mb{
+.mb {
     margin-bottom: 15px;
 }
 
-input, select{
+input,
+select {
     width: 100%;
     box-sizing: border-box;
     padding: 10px;
@@ -60,13 +61,13 @@ input, select{
     margin-bottom: 10px;
 }
 
-input[type="submit"]{
+input[type="submit"] {
     color: white;
     background-color: #48c5ce;
     font-weight: bold;
 }
 
-select{
+select {
     appearance: none;
     -moz-appearance: none;
     -webkit-appearance: none;
@@ -75,18 +76,18 @@ select{
     background-position: calc(100% - 10px) center;
 }
 
-footer{
+footer {
     background-color: #202121;
     padding: 40px;
     text-align: center;
 
 }
-    
-.picture{
+
+.picture {
     width: 160px;
 }
 
-.description{
+.description {
     display: inline-block;
     color: white;
     max-width: 40%;
@@ -94,40 +95,40 @@ footer{
     text-align: justify;
 }
 
-.description p, .description h3{
+.description p,
+.description h3 {
     margin-bottom: 20px;
 }
 
-.description h3{
+.description h3 {
     font-size: 24px;
 }
 
-@media screen and (max-width: 600px){
-    .formcontainer{
+@media screen and (max-width: 600px) {
+    .formcontainer {
         max-width: 90%;
         float: nonne;
         text-align: center;
     }
-    
-    .formcontainer h2, .formcontainer p {
+
+    .formcontainer h2,
+    .formcontainer p {
         text-align: justify;
     }
 
-    footer{
-  
-    }
+    footer {}
 
-    .picture{
+    .picture {
         width: 70%;
         margin-bottom: 20px;
     }
 
-    .description{
+    .description {
         max-width: 90%;
         margin: 0;
     }
 
-    .description h3{
+    .description h3 {
         text-align: center;
     }
 }
