Adicionando responsividade ao site de captura.

--- a/css/style1.css
+++ b/css/style1.css
@@ -79,3 +79,11 @@ footer {
 img {
     width: 150px;
 }
+
+@media screen and (max-width: 600px) {
+    .section1 {
+        float: none;
+        margin: 40px auto;
+        max-width: 300px;
+    }
+}
