--- a/css/style1.css
+++ b/css/style1.css
@@ -1,17 +1,21 @@
-body {
+* {
     margin: 0;
     padding: 0;
-    background-color: black;
+
 }
+
+body {
+    background-color: black;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
 
 .container {
     max-width: 1000px;
     margin: auto;
 }
 
-h1 {
-    font-size: 26px;
-}
 
 h3 {
     font-size: 16px;
@@ -26,6 +30,10 @@ p {
     text-align: center;
     padding: 10px;
     color: white;
+}
+
+.tittle {
+    font-size: 26px;
 }
 
 .main {
