--- a/css/style1.css
+++ b/css/style1.css
@@ -16,8 +16,12 @@ body {
     margin: auto;
 }
 
+.mb {
+    margin-bottom: 15px;
+}
 
-h3 {
+
+h2 {
     font-size: 16px;
 }
 
@@ -40,23 +44,32 @@ p {
     background-image: url('../images/people.jpg');
     height: 500px;
     background-size: cover;
-    overflow: hidden;
+    /* overflow: hidden; */
+}
+
+.form {
+    max-width: 230px;
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 20px;
+    float: right;
 }
 
 .section1 {
-    float: right;
+    padding: 20px;
+    /* float: right;
     background-color: rgba(255, 255, 255, 0.7);
     max-width: 200px;
     font-weight: bolder;
     padding: 15px;
-    margin: 15px;
+    margin: 15px; */
 }
 
 input,
 select {
-    width: 95%;
-    height: 30px;
-    margin: 5px 0;
+    width: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+    margin-bottom: 10px;
     border: none;
 }
 
@@ -67,8 +80,19 @@ select {
 #btn {
     color: white;
     background-color: #48c5ce;
-    border: none;
     cursor: pointer;
+    font-weight: bolder;
+}
+
+select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-image: url('../images/arrow.jpg');
+    background-repeat: no-repeat;
+    background-position: calc(100% - 10px) center;
+    /*  background-position-x: calc(100% - 10px);
+    background-position-y: center; */
 }
 
 footer {
